epserde/tests/fail/drop_memcase_deref.stderr
error[E0505]: cannot move out of `mem_case` because it is borrowed
  --> tests/fail/drop_memcase_deref.rs:21:10
   |
18 |     let mem_case = unsafe { Vec::<i32>::read_mem(cursor, buffer.len()).unwrap() };
   |         -------- binding `mem_case` declared here
19 |     let d = mem_case.deref();
   |             -------- borrow of `mem_case` occurs here
20 |     let d = d.clone();
21 |     drop(mem_case);
   |          ^^^^^^^^ move out of `mem_case` occurs here
22 |     let _d = d;
   |              - borrow later used here
